Fixed IE & safari bug in example

--- a/example/index.html
+++ b/example/index.html
@@ -10,9 +10,9 @@
    position: absolute;
    width: 1920px;
    height: 1080px;
-
    background: url("workspace.jpg");
-
+   left: 0;
+   top: 0;
  }
 
  #container {
