--- a/example/index.html
+++ b/example/index.html
@@ -25,10 +25,23 @@
    left: 100px;
  }
 
+ .block {
+   position: relative;
+   display: block;
+   width: 100px;
+   height: 100px;
+   background: red;
+   top: 300px;
+   left: 600px;
+   z-index: 1;
+ }
+
 </style>
 </head>
 <body>
-<div id="grid"></div>
+<div id="grid">
+  <a href="" class="block"></a>
+</div>
 <div id="container"></div>
 </body>
 <script src="../draggable.js"></script>
